# claude-sandbox

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
assets/: CLAUDE.md  Dockerfile  default-config.toml
assets/dolphin/: open-in-claude-sandbox.desktop
docs/: 2026-05-10-design.md  2026-05-10-implementation.md  flexibility-roadmap.md
docs/recipes/: context-menu.md  tailscale.md
packaging/: release.sh
packaging/obs/: README.md  _service  claude-sandbox.spec  debian.changelog  debian.control  debian.rules
src/: assets.rs  cli.rs  desktop.rs  env.rs  error.rs  hooks.rs  lib.rs  logging.rs  machine.rs  main.rs  mounts.rs  network.rs  paths.rs  picker.rs  project.rs  registry.rs  terminal.rs
src/config/: edit.rs  mod.rs  parse.rs
src/container/: create.rs  exec.rs  lifecycle.rs  ls.rs  migrate.rs  mod.rs  rename.rs  status.rs
src/features/: gpu.rs  mod.rs  selinux.rs  (+1 more)
tests/: assets_lookup.rs  assets_override_state.rs  binary_hash.rs  claim.rs  claude_version_detect.rs  cli_smoke.rs  config_auto_create.rs  config_global_merged.rs  config_parse.rs  credentials_shadow.rs  desktop_detect.rs  e2e_claude_md_symlink.rs  e2e_cli_resolve.rs  e2e_cs.rs  e2e_flags.rs  e2e_goal.rs  e2e_hooks.rs  e2e_image.rs  e2e_init.rs  e2e_lifecycle.rs  e2e_picker_existing_wt.rs  e2e_toml_recreate.rs  e2e_worktree_path.rs  gpg_agent_bind.rs  gpu_flags.rs  grant_acls_script.rs  integration_podman.rs  machine_config.rs  mount_optional.rs  naming.rs  oauth_token.rs  oauth_validation.rs  paths.rs  podman_args.rs  ports.rs  project_discovery.rs  terminal_title.rs  worktree.rs
(+8 files in other folders)
