[package]
name = "claude-sandbox"
version = "0.2.0"
edition = "2024"
description = "Run Claude Code in a rootless-Podman per-project sandbox."
license = "MIT"

[[bin]]
name = "claude-sandbox"
path = "src/main.rs"

[lib]
name = "claude_sandbox"
path = "src/lib.rs"

[profile.release]
strip = "symbols"
lto = "thin"

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
toml_edit = "0.22"
dialoguer = { version = "0.11", default-features = false, features = ["password"] }
nix = { version = "0.29", features = ["process", "signal", "user"] }
which = "6"
dirs = "5"
anyhow = "1"
thiserror = "1"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
